Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug
Bug#: 8674
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Not yet assigned to anyone <unassigned@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: pmladek@suse.cz
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
configexcept.ii.bz2 configexcept.ii.bz2 application/octet-stream 2003-05-21 15:16 36.10 KB Edit
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 8674 depends on: Show dependency tree
Show dependency graph
Bug 8674 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: Opened: 2002-11-21 10:56
I got next internal compiler error by compilation of
the OpenOffice.org.

I made some experiments to use g++ with other options,
but without sucess.


The result of the original command (I added only
-v and -save-temps):

g++ -v -save-temps -fmessage-length=0 -c -I. -I. -I../inc -I../../source/inc/inc -I../../in
c -I../../unx/inc -I../../unxlngi4.pro/inc -I. -I/usr/src/packages/BUILD/oo_1.0.
1_src/solver/641/unxlngi4.pro/inc/stl -I/usr/src/packages/BUILD/oo_1.0.1_src/sol
ver/641/unxlngi4.pro/inc/external -I/usr/src/packages/BUILD/oo_1.0.1_src/solver/
641/unxlngi4.pro/inc -I/usr/src/packages/BUILD/oo_1.0.1_src/solenv/unxlngi4/inc 
-I/usr/src/packages/BUILD/oo_1.0.1_src/solenv/inc -I/usr/src/packages/BUILD/oo_1
.0.1_src/res -I/usr/include -I/usr/src/packages/BUILD/oo_1.0.1_src/solver/641/un
xlngi4.pro/inc/stl -I/usr/src/packages/BUILD/oo_1.0.1_src/solenv/inc/Xp31 -I/usr
/lib/SunJava2-1.3/include -I/usr/lib/SunJava2-1.3/include/linux -I/usr/lib/SunJa
va2-1.3/include/native_threads/include -I/usr/X11R6/include -I/usr/lib/gcc-lib/i
486-suse-linux/3.3/include -I/usr/include     -I. -I../../res -I. -O2 -fno-stric
t-aliasing   -pipe  -fno-for-scope -fpermissive -fno-rtti -fexceptions -fno-enfo
rce-eh-specs   -fpic -DLINUX -DUNX -DVCL -DGCC -DC300 -DINTEL -DCVER=C300 -D_USE
_NAMESPACE -DGLIBC=2 -DX86 -D_PTHREADS -D_REENTRANT -DNEW_SOLAR -D_USE_NAMESPACE
=1 -DSTLPORT_VERSION=400 -D__DMAKE -DUNIX -DCPPU_ENV=gcc3 -DSUPD=641 -DBUILD=766
3 -DPRODUCT -DNDEBUG -DPRODUCT_FULL -DOPTIMIZE -DEXCEPTIONS_ON -DCUI -DSOLAR_JAV
A -DSRC641  -DSHAREDLIB -D_DLL_  -DMULTITHREAD  -w -o ../../unxlngi4.pro/slo/con
figexcept.o /usr/src/packages/BUILD/oo_1.0.1_src/configmgr/source/treemgr/config
except.cxx
g++: warning: -pipe ignored because -save-temps specified
Reading specs from /usr/lib/gcc-lib/i486-suse-linux/3.3/specs
Configured with: ../configure --enable-threads=posix --prefix=/usr --with-local-
prefix=/usr/local --infodir=/usr/share/info --mandir=/usr/share/man --libdir=/us
r/lib --enable-languages=c,c++,f77,objc,java,ada --disable-checking --enable-lib
gcj --with-gxx-include-dir=/usr/include/g++ --with-slibdir=/lib --with-system-zl
ib --enable-shared --enable-__cxa_atexit i486-suse-linux
Thread model: posix
gcc version 3.3 20021111 (experimental) (SuSE Linux)
 /usr/lib/gcc-lib/i486-suse-linux/3.3/cc1plus -E -D__GNUG__=3 -quiet -v -I. -I. 
-I../inc -I../../source/inc/inc -I../../inc -I../../unx/inc -I../../unxlngi4.pro
/inc -I. -I/usr/src/packages/BUILD/oo_1.0.1_src/solver/641/unxlngi4.pro/inc/stl 
-I/usr/src/packages/BUILD/oo_1.0.1_src/solver/641/unxlngi4.pro/inc/external -I/u
sr/src/packages/BUILD/oo_1.0.1_src/solver/641/unxlngi4.pro/inc -I/usr/src/packag
es/BUILD/oo_1.0.1_src/solenv/unxlngi4/inc -I/usr/src/packages/BUILD/oo_1.0.1_src
/solenv/inc -I/usr/src/packages/BUILD/oo_1.0.1_src/res -I/usr/include -I/usr/src
/packages/BUILD/oo_1.0.1_src/solver/641/unxlngi4.pro/inc/stl -I/usr/src/packages
/BUILD/oo_1.0.1_src/solenv/inc/Xp31 -I/usr/lib/SunJava2-1.3/include -I/usr/lib/S
unJava2-1.3/include/linux -I/usr/lib/SunJava2-1.3/include/native_threads/include
 -I/usr/X11R6/include -I/usr/lib/gcc-lib/i486-suse-linux/3.3/include -I/usr/incl
ude -I. -I../../res -I. -D__GNUC__=3 -D__GNUC_MINOR__=3 -D__GNUC_PATCHLEVEL__=0 
-D_GNU_SOURCE -DLINUX -DUNX -DVCL -DGCC -DC300 -DINTEL -DCVER=C300 -D_USE_NAMESP
ACE -DGLIBC=2 -DX86 -D_PTHREADS -D_REENTRANT -DNEW_SOLAR -D_USE_NAMESPACE=1 -DST
LPORT_VERSION=400 -D__DMAKE -DUNIX -DCPPU_ENV=gcc3 -DSUPD=641 -DBUILD=7663 -DPRO
DUCT -DNDEBUG -DPRODUCT_FULL -DOPTIMIZE -DEXCEPTIONS_ON -DCUI -DSOLAR_JAVA -DSRC
641 -DSHAREDLIB -D_DLL_ -DMULTITHREAD /usr/src/packages/BUILD/oo_1.0.1_src/confi
gmgr/source/treemgr/configexcept.cxx -w -fmessage-length=0 -fno-strict-aliasing 
-fno-for-scope -fpermissive -fno-rtti -fexceptions -fno-enforce-eh-specs -fpic -
O2 configexcept.ii
ignoring nonexistent directory "../../source/inc/inc"
ignoring nonexistent directory "../../inc"
ignoring nonexistent directory "../../unx/inc"
ignoring nonexistent directory "/usr/src/packages/BUILD/oo_1.0.1_src/solenv/unxl
ngi4/inc"
ignoring nonexistent directory "/usr/src/packages/BUILD/oo_1.0.1_src/solenv/inc/
Xp31"
ignoring nonexistent directory "/usr/lib/SunJava2-1.3/include/native_threads/inc
lude"
ignoring nonexistent directory "../../res"
ignoring duplicate directory "/usr/lib/gcc-lib/i486-suse-linux/3.3/include"
  as it is a non-system directory that duplicates a system directory
ignoring duplicate directory "/usr/include"
  as it is a non-system directory that duplicates a system directory
ignoring duplicate directory "/usr/include"
  as it is a non-system directory that duplicates a system directory
ignoring duplicate directory "."
ignoring duplicate directory "."
ignoring duplicate directory "/usr/src/packages/BUILD/oo_1.0.1_src/solver/641/un
xlngi4.pro/inc/stl"
ignoring duplicate directory "."
ignoring duplicate directory "."
#include "..." search starts here:
#include <...> search starts here:
 .
 ../inc
 ../../unxlngi4.pro/inc
 /usr/src/packages/BUILD/oo_1.0.1_src/solver/641/unxlngi4.pro/inc/stl
 /usr/src/packages/BUILD/oo_1.0.1_src/solver/641/unxlngi4.pro/inc/external
 /usr/src/packages/BUILD/oo_1.0.1_src/solver/641/unxlngi4.pro/inc
 /usr/src/packages/BUILD/oo_1.0.1_src/solenv/inc
 /usr/src/packages/BUILD/oo_1.0.1_src/res
 /usr/lib/SunJava2-1.3/include
 /usr/lib/SunJava2-1.3/include/linux
 /usr/X11R6/include
 /usr/include/g++
 /usr/include/g++/i486-suse-linux
 /usr/include/g++/backward
 /usr/local/include
 /usr/lib/gcc-lib/i486-suse-linux/3.3/include
 /usr/i486-suse-linux/include
 /usr/include
End of search list.
 /usr/lib/gcc-lib/i486-suse-linux/3.3/cc1plus -fpreprocessed configexcept.ii -qu
iet -dumpbase configexcept.cxx -auxbase-strip ../../unxlngi4.pro/slo/configexcep
t.o -O2 -w -version -fmessage-length=0 -fno-strict-aliasing -fno-for-scope -fper
missive -fno-rtti -fexceptions -fno-enforce-eh-specs -fpic -o configexcept.s
GNU C++ version 3.3 20021111 (experimental) (SuSE Linux) (i486-suse-linux)
        compiled by GNU C version 3.3 20021111 (experimental) (SuSE Linux).
/usr/src/packages/BUILD/oo_1.0.1_src/configmgr/source/treemgr/configexcept.cxx: 
In member function `rtl::OUString configmgr::configuration::WrappedUnoException:
:extractMessage() const':
/usr/src/packages/BUILD/oo_1.0.1_src/configmgr/source/treemgr/configexcept.cxx:2
02: internal compiler error: in cp_expr_size, at cp/cp-lang.c:307

Release:
gcc version 3.3 20021111 (experimental) (SuSE Linux)

Environment:
SuSE linux, beta-i386
glibc-2.3.1

How-To-Repeat:
g++ -fmessage-length=0 -c  -O2 -fno-strict-aliasing   -pipe -fno-for-scope -fpermissive -fno-rtti -fexceptions -fno-enforce-eh-specs   -fpic   -w -o configexcept.o configexcept.ii

------- Comment #1 From Wolfgang Bangerth 2002-11-21 11:11 -------
State-Changed-From-To: open->analyzed
State-Changed-Why: True. It's a regression in mainline. I won't attempt to
    cut this down further since there have been more reports
    about ICES in this spot recently, so maybe this is just
    a duplicate.

------- Comment #2 From Mark Mitchell 2002-12-09 23:21 -------
State-Changed-From-To: analyzed->closed
State-Changed-Why: Already fixed in GCC 3.3.

------- Comment #3 From Jason Merrill 2002-12-18 16:43 -------
From: jason@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org
Cc:  
Subject: c++/8674
Date: 18 Dec 2002 16:43:21 -0000

 CVSROOT:	/cvs/gcc
 Module name:	gcc
 Changes by:	jason@gcc.gnu.org	2002-12-18 08:43:20
 
 Added files:
 	gcc/testsuite/g++.dg/init: elide3.C 
 
 Log message:
 	PR c++/8674
 	* call.c (build_over_call): Check specifically for TARGET_EXPR
 	when eliding.
 
 Patches:
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/g++.dg/init/elide3.C.diff?cvsroot=gcc&r1=NONE&r2=1.1
 


------- Comment #4 From Jason Merrill 2003-02-10 16:18 -------
From: jason@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org
Cc:  
Subject: c++/8674
Date: 10 Feb 2003 16:18:34 -0000

 CVSROOT:	/cvs/gcc
 Module name:	gcc
 Branch: 	gcc-3_2-branch
 Changes by:	jason@gcc.gnu.org	2003-02-10 16:18:34
 
 Modified files:
 	gcc/cp         : ChangeLog call.c 
 
 Log message:
 	* call.c (call_builtin_trap): New fn.
 	(convert_arg_to_ellipsis): Use it.  Downgrade error to warning.
 	(build_call): Don't set current_function_returns_abnormally outside
 	a function.
 	
 	PR c++/8674
 	* call.c (build_over_call): Check specifically for TARGET_EXPR
 	when eliding.
 
 Patches:
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-3_2-branch&r1=1.2685.2.114.2.63&r2=1.2685.2.114.2.64
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/call.c.diff?cvsroot=gcc&only_with_tag=gcc-3_2-branch&r1=1.307.2.6.4.1&r2=1.307.2.6.4.2

Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug