re PR c++/8674 (ICE in cp_expr_size, at cp/cp-lang.c:307)

* call.c (call_builtin_trap): New fn.
        (convert_arg_to_ellipsis): Use it.  Downgrade error to warning.
        (build_call): Don't set current_function_returns_abnormally outside
        a function.

        PR c++/8674
        * call.c (build_over_call): Check specifically for TARGET_EXPR
        when eliding.

From-SVN: r62639